--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,21 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid"></div>
+    <div
+      id="main"
+      style="display: none;"
+      class="container-fluid justify-items-center"
+    >
+      <div id="card">
+        <div id="top" class="figure">♦</div>
+        <div id="value">A</div>
+        <div id="bottom" class="figure">♦</div>
+      </div>
+    </div>
+    <h1 id="cargando">Cargando pagina...</h1>
   </body>
 </html>
