Falta solo el boton

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,7 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div
-      id="main"
-      style="display: none;"
-      class="container-fluid justify-items-center"
-    >
+    <div id="main" style="display: none;" class="container-fluid text-center">
       <div id="card">
         <div id="top" class="figure">♦</div>
         <div id="value">A</div>
