Funcionanto timeInterval y boton

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
@@ -20,7 +20,12 @@
         <div id="value">A</div>
         <div id="bottom" class="figure">♦</div>
       </div>
+      <div>
+        <button id="btn" type="button" class="btn btn-secondary">
+          GENERATE CARD
+        </button>
+      </div>
     </div>
-    <h1 id="cargando">Cargando pagina...</h1>
+    <h1 id="cargando">Cargando...</h1>
   </body>
 </html>
