--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,11 @@
   <body>
     <div id="main" style="display: none;" class="container-fluid text-center">
       <div id="card">
-        <div id="top" class="figure">♦</div>
+        <div id="top" class="figure d-flex flex-row bd-highlight mb-3">♦</div>
         <div id="value">A</div>
-        <div id="bottom" class="figure">♦</div>
+        <div id="bottom" class="figure d-flex flex-row bd-hi">
+          ♦
+        </div>
       </div>
       <div>
         <button id="btn" type="button" class="btn btn-secondary">
